form created in new razor page

--- a/Intro/Pages/NewRazorPage.cshtml
+++ b/Intro/Pages/NewRazorPage.cshtml
@@ -5,3 +5,9 @@
 }
 <h3>Vinith Nair</h3>
 
+<form>
+    <input name="input1" placeholder="input 1" />
+    <input name="input2" placeholder="input 2" />
+    <input name="output" placeholder="output" />
+    <button name="btn">Submit</button>
+</form>
